--- a/home.html
+++ b/home.html
@@ -33,46 +33,27 @@
                     <div class="divider"></div>
                     <!-- add money form  start-->
 
-                    <!-- <form class="card-body">
-                        <div class="form-control">
-                            <label class="label">
-                                <span class="label-text">Amount</span>
-                            </label>
-                            <input type="text" placeholder="Amount " class="input input-bordered" required />
-                        </div>
-                        <div class="form-control">
-                            <label class="label">
-                                <span class="label-text">Pin</span>
-                            </label>
-                            <input type="password" autocapitalize="off" placeholder="password" class="input input-bordered" required />
-                            <label class="label">
-                                <a href="#" class="label-text-alt link link-hover">Forgot password?</a>
-                            </label>
-                        </div>
-                        <div class="form-control mt-6">
-                            <button class="btn btn-primary">Login</button>
-                        </div>
-                    </form> -->
                     <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                         <form class="card-body">
-                          <div class="form-control">
-                            <label class="label">
-                              <span class="label-text">Amount</span>
-                            </label>
-                            <input type="text" placeholder="Amount" class="input input-bordered" required />
-                          </div>
-                          <div class="form-control">
-                            <label class="label">
-                              <span class="label-text">Pin</span>
-                            </label>
-                            <input type="password" autocomplete="off" placeholder="password" class="input input-bordered" required />
-                           
-                          </div>
-                          <div class="form-control mt-6">
-                            <button class="btn btn-primary">Add Money</button>
-                          </div>
+                            <div class="form-control">
+                                <label class="label">
+                                    <span class="label-text">Amount</span>
+                                </label>
+                                <input id="input-add-money" type="text" placeholder="Amount" class="input input-bordered" required />
+                            </div>
+                            <div class="form-control">
+                                <label class="label">
+                                    <span class="label-text">Pin</span>
+                                </label>
+                                <input id="input-pin-number" type="password" autocomplete="off" placeholder="Pin Number"
+                                    class="input input-bordered" required />
+
+                            </div>
+                            <div class="form-control mt-6">
+                                <button id="btn-add-money" class="btn btn-primary">Add Money</button>
+                            </div>
                         </form>
-                      </div>
+                    </div>
 
                     <!-- add money form  end-->
 
