--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
     <!-- daisy ul cdn or scripe -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 
 <body>
@@ -20,26 +21,27 @@
                     <!-- available balance -->
                     <div class="stats shadow">
                         <div class="stat">
-                            <div class="stat-value">9400</div>
+                            <div id="acount-balance" class="stat-value">9400</div>
                             <div class="stat-desc">Available Balance </div>
                         </div>
                     </div>
                     <div class="divider"></div>
                     <!-- User action button -->
                     <div>
-                        <button class="btn btn-lg">Add Money</button>
-                        <button class="btn btn-lg">Cash Out</button>
+                        <button id="btn-show-add-money" class="btn btn-lg">Add Money</button>
+                        <button id="btn-show-cash-out" class="btn btn-lg">Cash Out</button>
                     </div>
                     <div class="divider"></div>
                     <!-- add money form  start-->
 
-                    <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                    <div id="add-money-form" class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                         <form class="card-body">
                             <div class="form-control">
                                 <label class="label">
                                     <span class="label-text">Amount</span>
                                 </label>
-                                <input id="input-add-money" type="text" placeholder="Amount" class="input input-bordered" required />
+                                <input id="input-add-money" type="text" placeholder="Amount"
+                                    class="input input-bordered" required />
                             </div>
                             <div class="form-control">
                                 <label class="label">
@@ -56,14 +58,39 @@
                     </div>
 
                     <!-- add money form  end-->
+                    <!-- cash out start -->
 
+                    <div id="cash-out-form" class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                        <form class="card-body">
+                            <div class="form-control">
+                                <label class="label">
+                                    <span class="label-text">Amount</span>
+                                </label>
+                                <input id="input-cash-out" type="text" placeholder="Cash Out Amount"
+                                    class="input input-bordered" required />
+                            </div>
+                            <div class="form-control">
+                                <label class="label">
+                                    <span class="label-text">Pin</span>
+                                </label>
+                                <input id="input-cash-out-pin" type="password" autocomplete="off"
+                                    placeholder="Pin Number" class="input input-bordered" required />
+
+                            </div>
+                            <div class="form-control mt-6">
+                                <button id="btn-cash-out" class="btn btn-primary">Cash Out</button>
+                            </div>
+                        </form>
+                    </div>
+                    <!-- cash out end -->
 
                 </div>
             </div>
         </div>
     </main>
-
+    <script src="/js/cash-out.js"></script>
     <script src="./js/home.js"></script>
+    <script src="js/fetures.js"></script>
 </body>
 
 </html>
